@@ -6,3 +6,4 @@ import pyBLASTtools.pointing
 import pyBLASTtools.quaternion
 import pyBLASTtools.mapmaker
 import pyBLASTtools.plot
+import pyBLASTtools.utils
